--- a/CookPopularControl/Themes/ChromeWindowStyle.xaml
+++ b/CookPopularControl/Themes/ChromeWindowStyle.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:ctl="clr-namespace:CookPopularControl.Controls.Windows"
+                    xmlns:win="clr-namespace:CookPopularControl.Controls.Windows"
                     xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors">
 
     <ResourceDictionary.MergedDictionaries>
@@ -12,9 +12,9 @@
 
     <!--Icon<—☐✕>-->
     <Style x:Key="WindowIconStyle" TargetType="{x:Type Button}">
-        <Setter Property="Width" Value="{Binding RelativeSource={RelativeSource AncestorType=ctl:ChromeWindow,Mode=FindAncestor},Path=IconWidth}" />
-        <Setter Property="Height" Value="{Binding RelativeSource={RelativeSource AncestorType=ctl:ChromeWindow,Mode=FindAncestor},Path=IconHeight}" />
-        <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource AncestorType=ctl:ChromeWindow,Mode=FindAncestor},Path=Foreground}" />
+        <Setter Property="Width" Value="{Binding RelativeSource={RelativeSource AncestorType=win:ChromeWindow,Mode=FindAncestor},Path=IconWidth}" />
+        <Setter Property="Height" Value="{Binding RelativeSource={RelativeSource AncestorType=win:ChromeWindow,Mode=FindAncestor},Path=IconHeight}" />
+        <Setter Property="Foreground" Value="{Binding RelativeSource={RelativeSource AncestorType=win:ChromeWindow,Mode=FindAncestor},Path=Foreground}" />
         <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
         <Setter Property="Cursor" Value="Hand" />
         <Setter Property="Template">
@@ -32,32 +32,32 @@
             </Setter.Value>
         </Setter>
     </Style>
-    <Style x:Key="BaseChromeWindowStyle" TargetType="{x:Type ctl:ChromeWindow}">
+    <Style x:Key="{x:Type win:ChromeWindow}" TargetType="{x:Type win:ChromeWindow}">
         <Setter Property="WindowState" Value="Normal" />
         <Setter Property="Foreground" Value="{DynamicResource AssistantForeground}" />
         <Setter Property="Background" Value="{DynamicResource PrimaryColorTheme}"/>
         <Setter Property="Effect" Value="{DynamicResource CustomShadowDepth2}" />
         <Setter Property="WindowChrome.WindowChrome">
             <Setter.Value>
-                <WindowChrome CaptionHeight="{Binding RelativeSource={RelativeSource AncestorType=ctl:ChromeWindow, Mode=FindAncestor},Path=IconHeight}" GlassFrameThickness="-1" CornerRadius="10"/>
+                <WindowChrome CaptionHeight="{Binding RelativeSource={RelativeSource AncestorType=win:ChromeWindow, Mode=FindAncestor},Path=IconHeight}" GlassFrameThickness="-1" CornerRadius="10"/>
             </Setter.Value>
         </Setter>
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ctl:ChromeWindow}">
+                <ControlTemplate TargetType="{x:Type win:ChromeWindow}">
                     <AdornerDecorator>
-                        <ctl:ChromeWindowClient>
+                        <win:ChromeWindowClient>
                             <Border Background="{TemplateBinding Background}" Effect="{TemplateBinding Effect}"
                                     BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
                                 <Grid>
                                     <Grid.RowDefinitions>
-                                        <RowDefinition Height="{Binding RelativeSource={RelativeSource AncestorType=ctl:ChromeWindow,Mode=FindAncestor},Path=IconHeight}"/>
+                                        <RowDefinition Height="{Binding RelativeSource={RelativeSource AncestorType=win:ChromeWindow,Mode=FindAncestor},Path=IconHeight}"/>
                                         <RowDefinition />
                                     </Grid.RowDefinitions>
                                     <Grid>
                                         <StackPanel Orientation="Horizontal">
                                             <Button Content="&#xe660;" FontFamily="{DynamicResource WindowIcons}" Style="{StaticResource WindowIconStyle}" 
-                                                    Command="ctl:ChromeWindow.SidebarPopupCommand" ToolTip="功能" />
+                                                    Command="win:ChromeWindow.SidebarPopupCommand" ToolTip="功能" />
                                             <Button Content="&#xe602;" FontFamily="{DynamicResource WindowIcons}" Style="{StaticResource WindowIconStyle}" 
                                                     Command="{x:Static SystemCommands.MinimizeWindowCommand}" ToolTip="上一个" />
                                         </StackPanel>
@@ -78,7 +78,7 @@
                                     </Grid>
                                 </Grid>
                             </Border>
-                        </ctl:ChromeWindowClient>
+                        </win:ChromeWindowClient>
                     </AdornerDecorator>
                     <ControlTemplate.Triggers>
                         <Trigger Property="WindowState" Value="Maximized">
@@ -94,6 +94,6 @@
         </Setter>
     </Style>
 
-    <Style x:Key="{x:Type ctl:ChromeWindow}" TargetType="{x:Type ctl:ChromeWindow}" BasedOn="{StaticResource BaseChromeWindowStyle}"/>
+    <Style x:Key="DefaultChromeWindowStyle" TargetType="{x:Type win:ChromeWindow}" BasedOn="{StaticResource {x:Type win:ChromeWindow}}"/>
 
 </ResourceDictionary>
