--- a/CookPopularControl/Themes/ToolTipStyle.xaml
+++ b/CookPopularControl/Themes/ToolTipStyle.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:attached="clr-namespace:CookPopularControl.Communal.Attached">
 
-    <Style x:Key="BaseToolTip" TargetType="{x:Type ToolTip}">
+    <Style x:Key="DefaultToolTipStyle" TargetType="{x:Type ToolTip}">
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
         <Setter Property="Placement" Value="Mouse" />
@@ -20,7 +20,5 @@
             </Setter.Value>
         </Setter>
     </Style>
-
-    <Style x:Key="{x:Type ToolTip}" BasedOn="{StaticResource BaseToolTip}" TargetType="{x:Type ToolTip}" />
 
 </ResourceDictionary>
