--- a/CookPopularControl/Themes/ProgressBarStyle.xaml
+++ b/CookPopularControl/Themes/ProgressBarStyle.xaml
@@ -20,5 +20,12 @@
         <Setter Property="Background" Value="{DynamicResource LinearTheme}" />
         <Setter Property="assistant:ProgressBarAssistant.ArcThickness" Value="10" />
     </Style>
+    <Style x:Key="IndeterminateCircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarStyle}">
+        <Setter Property="IsIndeterminate" Value="True" />
+    </Style>
+    <Style x:Key="LoadingCircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarStyle}">
+        <Setter Property="Value" Value="0" />
+        <Setter Property="IsIndeterminate" Value="True" />
+    </Style>
 
 </ResourceDictionary>
