--- a/CookPopularControl/Themes/ProgressBarStyle.xaml
+++ b/CookPopularControl/Themes/ProgressBarStyle.xaml
@@ -17,8 +17,11 @@
     <Style x:Key="CircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarBaseStyle}">
         <Setter Property="BorderBrush" Value="{DynamicResource BorderBrushColor}" />
         <Setter Property="BorderThickness" Value="0" />
-        <Setter Property="Background" Value="{DynamicResource LinearTheme}" />
-        <Setter Property="assistant:ProgressBarAssistant.ArcThickness" Value="10" />
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="assistant:ProgressBarAssistant.ArcThickness" Value="5" />
+        <Setter Property="assistant:ProgressBarAssistant.IsShowPercent" Value="True" />
+        <Setter Property="assistant:ProgressBarAssistant.TextColor" Value="{DynamicResource PrimaryForeground}" />
+        <Setter Property="FontSize" Value="{DynamicResource Double20Value}" />
     </Style>
     <Style x:Key="IndeterminateCircularProgressBarStyle" TargetType="{x:Type ProgressBar}" BasedOn="{StaticResource CircularProgressBarStyle}">
         <Setter Property="IsIndeterminate" Value="True" />
